Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTIEBR.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT32;
typedef int * LPINT32;
typedef unsigned short UINT16;
typedef unsigned short * LPUINT16;
typedef unsigned int UINT32;
typedef unsigned int * LPUINT32;
typedef unsigned long * LPMSGADDR;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
BTIEBRAPI UINT16 __stdcall BTIEBR_RTStatus(INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SABlkWr(INT32 rtlink,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SABlkWrEx(INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SchedBuild(INT32 nummsgs,LPMSGADDR msgaddr,LPINT32 freq,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SchedBuildEx(INT32 nummsgs,LPMSGADDR msgaddr,LPINT32 freq,LPINT32 period,LPVOID buf,UINT32 bufsize,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SchedBuildExx(UINT32 frametime,INT32 nummsgs,LPMSGADDR msgaddr,LPINT32 period,LPVOID buf,UINT32 bufsize,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SchedCalc(LPMSGADDR msgaddr,INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_SchedDisplay(UINT32 nummsgs,LPUINT32 count);
BTIEBRAPI VOID __stdcall BTIEBR_SchedHook(INT32 index,LPVOID ptr);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SchedInsEnd(INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SchedInsMsg(UINT32 index,LPMSGADDR msgaddr,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SchedInsStart(UINT32 frametime,UINT32 count,INT32 channum,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_SchedMaxval(LPUINT32 array,UINT32 arraycount);
BTIEBRAPI UINT32 __stdcall BTIEBR_SchedMinval(LPUINT32 array,UINT32 arraycount);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SerialClear(INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SerialConfig(UINT32 configval,UINT16 count,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SerialConfigEx(UINT32 configval,UINT16 count,INT32 channum,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_SerialStatus(INT32 channum,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_SerialWr(LPUINT16 buf,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_TestProtocol(HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_ValPackRTCWD(INT32 MCflag,INT32 TAval,INT32 TRflag,INT32 SAval,INT32 count);
BTIEBRAPI VOID __stdcall BTIEBR_ValUnpackRTCWD(UINT16 cwd,LPINT32 BCASTflag,LPINT32 MCflag,LPINT32 TAval,LPINT32 TRflag,LPINT32 SAval,LPINT32 count);