Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIEBRNET.CS

            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_RTStatus@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_RTStatus(Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SABlkWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_SABlkWr(Int32 rtlink, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SABlkWrEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_SABlkWrEx(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SchedBuild@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_SchedBuild(Int32 nummsgs, UInt32[] msgaddr, Int32[] freq, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SchedBuildEx@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_SchedBuildEx(Int32 nummsgs, UInt32[] msgaddr, Int32[] freq, Int32[] period, IntPtr[] buf, UInt32 bufsize, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SchedBuildExx@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_SchedBuildExx(UInt32 frametime, Int32 nummsgs, UInt32[] msgaddr, Int32[] period, IntPtr[] buf, UInt32 bufsize, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SchedCalc@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_SchedCalc(ref UInt32 msgaddr, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SchedDisplay@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_SchedDisplay(UInt32 nummsgs, ref UInt32 count);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SchedHook@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_SchedHook(Int32 index, IntPtr ptr);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SchedInsEnd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_SchedInsEnd(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SchedInsMsg@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_SchedInsMsg(UInt32 index, ref UInt32 msgaddr, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SchedInsStart@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_SchedInsStart(UInt32 frametime, UInt32 count, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SchedMaxval@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_SchedMaxval(UInt32[] arrayval, UInt32 arrayvalcount);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SchedMinval@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_SchedMinval(UInt32[] arrayval, UInt32 arrayvalcount);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SerialClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_SerialClear(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SerialConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_SerialConfig(UInt32 configval, UInt16 count, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SerialConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_SerialConfigEx(UInt32 configval, UInt16 count, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SerialStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_SerialStatus(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_SerialWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_SerialWr(UInt16[] buf, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_TestProtocol@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_TestProtocol(IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ValPackRTCWD@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_ValPackRTCWD(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, Int32 count);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ValUnpackRTCWD@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_ValUnpackRTCWD(UInt16 cwd, ref Int32 bcastflag, ref Int32 mcflag, ref Int32 taval, ref Int32 trflag, ref Int32 saval, ref Int32 count);
        }
